# social_data_access

./: .gitignore  README.md  devcontainer_setup.sh  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md
notebooks/: favelas.ipynb  gdp.ipynb  poverty.ipynb  slums.ipynb
social_data_access/: config.py  social_data.py
