[tool.poetry]
name = "social-data-access"
version = "0.1.0"
description = ""
authors = ["Jean Carlo Machado <jean.machado@getyourguide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fire = "*"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
