[tool.poetry]
name = "social-data-access"
version = "0.1.0"
description = ""
authors = ["Jean Carlo Machado <jean.machado@getyourguide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fire = "*"
pandas = "^2.2.2"
jupyter = "^1.0.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
tiny-data-warehouse = "^0.1.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
